--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #mysql connection 
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/demo?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username= root
-spring.datasource.password= 123456
+spring.datasource.password= root
 
 
 #hibernate
